more layout restructuring fixing some of the layout jumping and responsive issues

--- a/angular/app/header/header.less
+++ b/angular/app/header/header.less
@@ -1,3 +1,7 @@
 .Header{
   	z-index: 3;
+
+  button:first-child {
+	padding-top: 6px;
+  }
 }
