--- a/angular/app/sidebar/sidebar.less
+++ b/angular/app/sidebar/sidebar.less
@@ -1,8 +1,14 @@
 .Sidebar {
-	width: 250px !important;
-	min-width: 250px !important;
-	max-width: 250px !important;
 	background-color: rgb(63, 81, 181);
+    white-space: nowrap;
+}
+
+.Sidebar,
+.Sidebar.md-locked-open-add-active,
+.Sidebar.md-locked-open {
+    width: 250px;
+    min-width: 250px;
+    max-width: 250px;
 }
 
 .Sidebar-header {
